--- a/todo_api/Gemfile
+++ b/todo_api/Gemfile
@@ -29,6 +29,12 @@ gem "tzinfo-data", platforms: %i[ windows jruby ]
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 
+# CORS
+gem "rack-cors"
+
+# https://github.com/stas/otp-jwt#jwt-authorization
+gem 'otp-jwt'
+
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
 
@@ -44,7 +50,6 @@ group :development do
   # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
   # gem "spring"
 
-# CORS
-  gem "rack-cors"
+
 
 end
