--- a/todo_api/Gemfile
+++ b/todo_api/Gemfile
@@ -35,6 +35,8 @@ gem "rack-cors"
 # BCRYPT
 gem "bcrypt"
 
+gem 'jwt'
+
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
@@ -50,10 +52,5 @@ end
 group :development do
   # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
   # gem "spring"
-
-
-
-# JWT
-  gem "jwt"
 
 end
